--- a/index.html
+++ b/index.html
@@ -11,28 +11,51 @@
     <header>
         <!-- nav bar -->
         <div class="nav-bar ">
-            <div>
-                logo
+            <div class="logo">
+                <img src="./img/logo.png" alt="">
             </div>
             <i class="fa fa-bars"></i>
-            
         </div>
         <!-- jumbotron con diversi containter -->
         <div class="container jumbotron">
             <div class="big card">
-                get a demo application
+                <h4>Get a demo application</h4>
+                <strong>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                     Explicabo tempore adipisci veniam nisi praesentium ipsum.</strong>
+                     <button><i class="fa-brands fa-apple"></i> App Store</button>
+                     <img src="./img/phone.png" alt="">
             </div>
             <div class="little card">
-                clean code 
+                <i class="fa-solid fa-file-code"></i>
+                <h4>Clean code </h4>
+                <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Ratione nobis architecto ad dolore quod,facere 
+                    totam quas recusandae blanditiis.
+                </strong>
             </div>
             <div class="little card">
-                web design
+                <i class="fa-solid fa-compass-drafting"></i>
+               <h4>Web design</h4> 
+               <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Ratione nobis architecto ad dolore quod,facere 
+                totam quas recusandae blanditiis.
+            </strong>
             </div>
             <div class="little card">
-                developement
+                <i class="fa-solid fa-laptop-code"></i>
+                <h4>developement</h4>
+                <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Ratione nobis architecto ad dolore quod,facere 
+                    totam quas recusandae blanditiis.
+                </strong>
             </div>
             <div class="little card">
-                branding
+                <i class="fa-solid fa-bullhorn"></i>
+                <h4>branding</h4>
+                <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Ratione nobis architecto ad dolore quod,facere 
+                    totam quas recusandae blanditiis.
+                </strong>
             </div>
         </div>
     </header>
