fine mobile first

--- a/index.html
+++ b/index.html
@@ -62,52 +62,105 @@
     <main>
         <!-- due colonne -->
         <div class="due-col container">
-            <div class="first col">
-                strategic planning
+            <div class="first">
+                <img src="./img/planning1.png" alt="">
+                <h3>strategic planning</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem labore asperiores fugiat eos voluptatum! Cumque alias in veritatis,
+                     sed obcaecati numquam quasi maxime dolor recusandae eius non! Sunt, maxime nesciunt?</p>
             </div>
 
-            <div class="second col">
-                app developement
+            <div class="second ">
+                <img src="./img/planning2.png" alt="">
+                <h3>App developement</h3>
+                <i>Devolop an on-demand app for you delivery business to reach your 
+                    targeted customers without any interruption
+                </i>
+                <div class="button"><i class="fa-solid fa-arrow-down"></i></div>
+
             </div>
         </div>
          <!--testimonial  -->
          <div class="container testimonial">
-            <h6>TESTIMONIAL</h6>
-            <p>We are committed expert partners</p>
+            <p>TESTIMONIALS</p>
+            <h2>We are committed expert partners</h2>
             <p>we place huge value on strong releationship and have seen
                 the benefit they bring to our business. Customer feedback is
                 vital in helping us to get it right.
             </p>
                 <div class="card-testimonial">
-                    <img src="" alt="">
+                    <div class="img-testimonial"><img src="./img/testimonial1.jpg" alt=""></div>
                     <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, cumque. Pariatur est esse adipisci doloribus incidunt a possimus. Enim libero error quisquam, 
                     fugiat praesentium amet aperiam atque cum adipisci voluptatibus.</p>
+                    <P class="name">NAT REYNOLDS</P>
                 </div>
                 <div class="card-testimonial">
-                    <img src="" alt="">
+                    <div class="img-testimonial"><img src="./img/testimonial2.jpg" alt=""></div>
                     <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, cumque. Pariatur est esse adipisci doloribus incidunt a possimus. Enim libero error quisquam, 
                     fugiat praesentium amet aperiam atque cum adipisci voluptatibus.</p>
+                    <p>CELIA ALMEDA</p>
                 </div>
                 <div class="card-testimonial">
-                    <img src="" alt="">
+                    <div class="img-testimonial"><img src="./img/testimonial3.jpg" alt=""></div>
                     <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, cumque. Pariatur est esse adipisci doloribus incidunt a possimus. Enim libero error quisquam, 
                     fugiat praesentium amet aperiam atque cum adipisci voluptatibus.</p>
+                    <p>BOB ROBERTS</p>
                 </div>
             </div>
             <!-- benefits of working with us -->
             <div class="container benefits">
-                <h6>benefits to work with us</h6>
-                <div class="card-benefits">01</div>
-                <div class="card-benefits">02</div>
-                <div class="card-benefits">03</div>
-                <div class="card-benefits">04</div>
-                <div class="card-benefits">05</div>
-                <div class="card-benefits">06</div>
+                <h3>Benefits to work with us</h3>
+                <div class="card-benefits">
+                    <h2>01</h2>
+                    <strong>Hight Quality</strong>
+                    <p>Vitae suscipit mauris a diam maecenas sed enim ut. Mauris augue neque gravida 
+                        in fermentum. praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                    </p>
+                    <button>more</button>
+                </div>
+                <div class="card-benefits">
+                    <h2>02</h2>
+                    <strong>Creative Team</strong>
+                    <p>Vitae suscipit mauris a diam maecenas sed enim ut. Mauris augue neque gravida 
+                        in fermentum. praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                    </p>
+                    <button>more</button>
+                </div>
+                <div class="card-benefits">
+                    <h2>03</h2>
+                    <strong>Amazing Results</strong>
+                    <p>Vitae suscipit mauris a diam maecenas sed enim ut. Mauris augue neque gravida 
+                        in fermentum. praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                    </p>
+                    <button>more</button>
+                </div>
+                <div class="card-benefits">
+                    <h2>04</h2>
+                    <strong>Best Pricing</strong>
+                    <p>Vitae suscipit mauris a diam maecenas sed enim ut. Mauris augue neque gravida 
+                        in fermentum. praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                    </p>
+                    <button>more</button>
+                </div>
+                <div class="card-benefits"><h2>05</h2>
+                    <strong>Innovations</strong>
+                    <p>Vitae suscipit mauris a diam maecenas sed enim ut. Mauris augue neque gravida 
+                        in fermentum. praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                    </p>
+                    <button>more</button>
+                </div>
+                <div class="card-benefits">
+                    <h2>06</h2>
+                    <strong>24/7 Support</strong>
+                    <p>Vitae suscipit mauris a diam maecenas sed enim ut. Mauris augue neque gravida 
+                        in fermentum. praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                    </p>
+                    <button>more</button>
+                </div>
             </div>
             <!-- aobut us -->
             <div class="container ">
                 <div class="about-us">
-                    <h2>About Us</h2>
+                    <h1>About Us</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus vero facere 
                     amet perspiciatis unde aut inventore dignissimos. Temporibus, unde itaque. Nobis dolorum, 
                     perspiciatis animi doloremque id beatae hic laboriosam aut!</p>
@@ -117,32 +170,33 @@
                          molestias odio rerum at nulla ipsa et minus, doloremque repudiandae?</p>
                 </div>        
                         <div class="cit-img">
-                            <img src="" alt="">
-                            i help companies tinicidum tortor aliquam nulla
-                            facilitis cras fermentum odio.
-                          <button>find me</button>  
+                            <img class="img-testimonial" src="./img/about.jpg" alt="" >
+                            <i class="fa-solid fa-quote-left"></i>
+                            <strong>i help companies tinicidum tortor aliquam nulla
+                                facilitis cras fermentum odio.</strong>
+                          <button><i class="fa-brands fa-linkedin"></i>find me on linkedin</button>  
                         </div>
             </div>
             <!-- get started -->
             <div class="container get-started">
-                <div >Get started</div>
-                <div><h4>Simpli, Trasparent pricing</h4></div>
+                <a>GET STARTED</a>
+                <div><h4>Simple, Trasparent Pricing</h4></div>
                 <div><h1>It's Free!</h1></div>
                 <div><p>We're still in beta and we will be for awhile.
                     As we add more functionaly, we'll look inventor
                     other plans with more controls.
                 </p></div>
-                <button>Get started</button>
-                <div>Copyright 2021 boolean . classe XX . <a href="privacy policy"></a></div>
+                <button> Get Started</button>
+                <div class="copy">Copyright 2021 boolean . classe XX . <a href="privacy policy">privacy policy</a></div>
             </div>
         </main>
         <footer>
             <div class="container footer">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi at doloribus optio necessitatibus, et earum reprehenderit quaerat animi accusantium eius eum enim non,
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                      magnam eaque velit omnis, nihil similique fugiat! </p>
                      
                      <p><a href="">lorem ipsum</a>
-                    scelerisque mauris pellentesque <a href=""></a>Boolean careers</p>
+                    scelerisque mauris pellentesque <a href="">Boolean careers</a></p>
 
             </div>
             
