fine tablet screen

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="due-col container">
             <div class="first">
                 <img src="./img/planning1.png" alt="">
-                <h3>strategic planning</h3>
+                <h3>Strategic Planning</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem labore asperiores fugiat eos voluptatum! Cumque alias in veritatis,
                      sed obcaecati numquam quasi maxime dolor recusandae eius non! Sunt, maxime nesciunt?</p>
             </div>
@@ -97,18 +97,18 @@
                     <div class="img-testimonial"><img src="./img/testimonial2.jpg" alt=""></div>
                     <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, cumque. Pariatur est esse adipisci doloribus incidunt a possimus. Enim libero error quisquam, 
                     fugiat praesentium amet aperiam atque cum adipisci voluptatibus.</p>
-                    <p>CELIA ALMEDA</p>
+                    <p class="name">CELIA ALMEDA</p>
                 </div>
                 <div class="card-testimonial">
                     <div class="img-testimonial"><img src="./img/testimonial3.jpg" alt=""></div>
                     <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, cumque. Pariatur est esse adipisci doloribus incidunt a possimus. Enim libero error quisquam, 
                     fugiat praesentium amet aperiam atque cum adipisci voluptatibus.</p>
-                    <p>BOB ROBERTS</p>
+                    <p class="name">BOB ROBERTS</p>
                 </div>
             </div>
             <!-- benefits of working with us -->
             <div class="container benefits">
-                <h3>Benefits to work with us</h3>
+                <div class="name"><h3>Benefits to work with us</h3></div>
                 <div class="card-benefits">
                     <h2>01</h2>
                     <strong>Hight Quality</strong>
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <!-- aobut us -->
-            <div class="container ">
+            <div class="container info ">
                 <div class="about-us">
                     <h1>About Us</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus vero facere 
