--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
         <!-- jumbotron con diversi containter -->
         <div class="container jumbotron">
             <div class="big card">
+                <div class="demo">
                 <h4>Get a demo application</h4>
                 <strong>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                      Explicabo tempore adipisci veniam nisi praesentium ipsum.</strong>
                      <button><i class="fa-brands fa-apple"></i> App Store</button>
-                     <img src="./img/phone.png" alt="">
+                </div>   
+                     <div class="phone"><img src="./img/phone.png" alt=""></div>
             </div>
             <div class="little card">
                 <i class="fa-solid fa-file-code"></i>
@@ -62,6 +64,7 @@
     <main>
         <!-- due colonne -->
         <div class="due-col container">
+            <div class="container laptop">
             <div class="first">
                 <img src="./img/planning1.png" alt="">
                 <h3>Strategic Planning</h3>
@@ -78,6 +81,7 @@
                 <div class="button"><i class="fa-solid fa-arrow-down"></i></div>
 
             </div>
+        </div>
         </div>
          <!--testimonial  -->
          <div class="container testimonial">
@@ -108,6 +112,7 @@
             </div>
             <!-- benefits of working with us -->
             <div class="container benefits">
+                <!-- <div class="laptop-cont"> -->
                 <div class="name"><h3>Benefits to work with us</h3></div>
                 <div class="card-benefits">
                     <h2>01</h2>
@@ -156,6 +161,7 @@
                     </p>
                     <button>more</button>
                 </div>
+            <!-- </div> -->
             </div>
             <!-- aobut us -->
             <div class="container info ">
